# lg-webos-cli

./: .gitignore  pyproject.toml  setup.py
lg-webos-cli/: __main__.py
lg_webos_cli/: __main__.py  caller.py  connection_cache.py  formatter.py  main.py  store.py
