[tool.poetry]
name = "lg-webos-cli"
version = "0.1.0"
description = ""
authors = ["Tema Klochko <tema@klochko.ru>"]
packages = [
    { include = "lg-webos-cli" },
    { include = "lg-webos-cli/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.9"
pywebostv = "^0.8.4"
keyring = "^21.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
