[tool.poetry]
name = "lg-webos-cli"
version = "0.1.0"
description = ""
authors = ["Tema Klochko <tema@klochko.ru>"]
packages = [
    { include = "lg_webos_cli" },
    { include = "lg_webos_cli/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.9"
pywebostv = "^0.8.4"
keyring = "^21.8.0"
wakeonlan = "^2.0.1"
getmac = "^0.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
